🐛 some fixes for switching EGs